--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
+<!doctype html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="utf-8">
     <title>Nomine</title>
-</head>
+    <base href="/">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto&amp;subset=latin-ext" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+<link href="styles.5f7199176fd987148f6e.bundle.css" rel="stylesheet"/></head>
 <body>
-    <h1>Coming soon</h1>
-</body>
+    <app>Loading...</app>
+<script type="text/javascript" src="inline.2ceee178b9d55e272ad3.bundle.js"></script><script type="text/javascript" src="vendor.69888d0d11ae936a042f.bundle.js"></script><script type="text/javascript" src="main.28657dea4ba1042c05cf.bundle.js"></script></body>
 </html>
